# new_vision

./: CMakeLists.txt  LICENSE  Signals.py  backup_cam_parameters.py  cameras.py  config.json  config.py  configFile.py  frameRenderer.py  frameUpdater.py  gamecommands.py  im_proces_tracking.py  image_draw.py  image_preparer.py  image_processor.py  image_processor_segm.py  image_tracker.py  mainWindow.py  measurement_system.py  package.xml  pixel2metric.py  singleton.py  speed_test.py  start_vision.py  style.css  template_finder.py  test.py  testvision.py  ui.glade  ui.py  uiFrame.py  utils.py  visao.py
include/: videoplayer.py
lib/: videoplayer.py
msg/: VisionMessage.msg
src/: vision.cpp
temp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  new_vision
temp/src/: new_vision.cpp
